SFDC Automation/src/objects/VehicleSearchSetting__c.object
<CustomObject>
    <fields>
        <fullName>SAM_Truck__c</fullName>
        <label>SAM Truck</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>122</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sleeper_Size__c</fullName>
        <label>Sleeper Size</label>
        <picklist>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>58</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>72</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>73</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sleeper_Type__c</fullName>
        <label>Sleeper Type</label>
        <picklist>
            <picklistValues>
                <fullName>Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Susp_Type__c</fullName>
        <label>Suspension Type</label>
        <picklist>
            <picklistValues>
                <fullName>AIR RIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAF SPRINGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TORSION BARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WALKING BEAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Take_Price__c</fullName>
        <label>Take Price</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans_Model_Tractor__c</fullName>
        <label>Trans Model Tractor</label>
        <picklist>
            <picklistValues>
                <fullName>2550 HS/RDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000HS 5-SPEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000HS 6SPD AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 RDS 3-SPEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 RDS 4-SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000RDS 6-SPEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 RDS-P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500  RDS AUTO 5SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT545</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM-15D 10B LST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-12210B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR13210B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-14210B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-9210B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRM-15210B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-11210C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-12210C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-13210B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-13210C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-14210B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-14210C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-15210B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-15210C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-16210C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRO-18210C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FROF-13210C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FROF-15210C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS4106B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS5406N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSO8406A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trans_Model_Trailer__c</fullName>
        <label>Trans Model Trailer</label>
        <picklist>
            <picklistValues>
                <fullName>Null</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trans_Model_Truck__c</fullName>
        <label>Trans Model Truck</label>
        <picklist>
            <picklistValues>
                <fullName>1000HS 5-SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000HS 6-SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000RDS 5SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000 (5-SPEED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000P 5-SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2100HS 5-SPEED AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2100 RDS 5-SPD AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2200HS/RDS 6 SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2200HS 5-SPEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2200RDS 5-SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2200RDS 6SPD AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2300HS 5-SPEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2400 (5SPD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2400P 5SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500  HS/ RDS 6SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500HS 4SPD AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500HS 5-SPEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500HS GEN4 6-SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500 RDS 5-SPD AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2550 HS/RDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000HS 5SPD O/D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000HS 5-SPEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000HS 6SPD AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 RDS 4-SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 RDS 5-SPD AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000RDS 6-SPEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 RDS-P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500  RDS AUTO 5SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>465 6SPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4R100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transmission_Type2__c</fullName>
        <label>Transmission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wheel_Base__c</fullName>
        <label>Wheel Base</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>109</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>116</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>117</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>118</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>133</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>135</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>137</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>138</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>144</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>146</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>148</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>152</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>153</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>154</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>155</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>156</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vehicle Search Setting</label>
    <nameField>
        <label>VehicleSearchSettingName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Search Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>